# core_packages

./: .clang-format  .gitignore  .last_processed_file  README.md  metadata.json
ARM/gcc_clang/: CMakeLists.txt
ARM/gcc_clang/cmake/: InstallHeaders.cmake.in  coreUtils.cmake
ARM/gcc_clang/cmake/abov/: a31c12.cmake  a31c143.cmake  a31c144.cmake  a31g11.cmake  a31g12.cmake  a31g21.cmake  a31g224.cmake  a31g226.cmake  a31g313.cmake  a31g314.cmake  a31g316.cmake  a31g32.cmake  a31g33.cmake  a31g34.cmake  a31l1.cmake  a31l21.cmake  a31l22.cmake  a31m.cmake  a31s.cmake  a31t.cmake  a33g52.cmake  a33g53.cmake  a33m.cmake  a34g430.cmake  a34g43a.cmake  a34l.cmake  a34m.cmake
ARM/gcc_clang/cmake/adi/: max32690.cmake
ARM/gcc_clang/cmake/arterytek/: at32a40.cmake  at32a423c.cmake  at32a423k.cmake  at32a423r.cmake  at32a423t.cmake  at32a423v.cmake  at32f0.cmake  at32f402.cmake  at32f403.cmake  at32f405.cmake  at32f407.cmake  at32f413.cmake  at32f415.cmake  at32f421c.cmake  at32f421f.cmake  at32f421g.cmake  at32f421k.cmake  at32f422.cmake  at32f423c.cmake  at32f423k.cmake  at32f423r.cmake  at32f423t.cmake  at32f423v.cmake  at32f425.cmake  at32f426.cmake  at32f435c.cmake  at32f435r.cmake  at32f435v.cmake  at32f435z.cmake  at32f437.cmake  at32f455.cmake  at32f456.cmake  at32f457.cmake  at32f49.cmake  at32l021c.cmake  at32l021f.cmake  at32l021g.cmake  at32l021k.cmake  at32m412.cmake  at32m416.cmake  (+1 more)
ARM/gcc_clang/cmake/geehy/: apm32a.cmake  apm32e0.cmake  apm32e1.cmake  apm32f00.cmake  apm32f03.cmake  apm32f05.cmake  apm32f07.cmake  apm32f09.cmake  apm32f103c.cmake  apm32f103r.cmake  apm32f103t.cmake  apm32f103v.cmake  apm32f103z.cmake  apm32f105.cmake  apm32f107.cmake  apm32f402.cmake  apm32f403.cmake  apm32f405.cmake  apm32f407.cmake  apm32f41.cmake  apm32f42.cmake  apm32f44.cmake  apm32f46.cmake  apm32m.cmake  bmp561.cmake
ARM/gcc_clang/cmake/gigadevice/: gd32a.cmake  gd32c1.cmake  gd32c2.cmake  gd32e1.cmake  gd32e230.cmake  gd32e232.cmake  gd32e235c.cmake  gd32e235f.cmake  gd32e235g.cmake  gd32e235k.cmake  gd32e502.cmake  gd32e503.cmake  gd32e505.cmake  gd32e507.cmake  gd32e508.cmake  gd32e51.cmake  gd32f101c.cmake  gd32f101r.cmake  gd32f101t.cmake  gd32f101v.cmake  gd32f101z.cmake  gd32f103c.cmake  gd32f103r.cmake  gd32f103t.cmake  gd32f103v.cmake  gd32f103z.cmake  gd32f105.cmake  gd32f107.cmake  gd32f13.cmake  gd32f15.cmake  gd32f205.cmake  gd32f207.cmake  gd32f303c.cmake  gd32f303r.cmake  gd32f303v.cmake  gd32f303z.cmake  gd32f305.cmake  gd32f307.cmake  gd32f31.cmake  gd32f33.cmake  (+20 more)
ARM/gcc_clang/cmake/hdsc/: hc32f0.cmake  hc32f11.cmake  hc32f12.cmake  hc32f14.cmake  hc32f17.cmake  hc32f19.cmake  hc32f3.cmake  hc32f44.cmake  hc32f45.cmake  hc32f46.cmake  hc32f47.cmake  hc32f4a.cmake  hc32l0.cmake  hc32l11.cmake  hc32l13.cmake  hc32l15.cmake  hc32l17.cmake  hc32l19.cmake  hc32m.cmake
ARM/gcc_clang/cmake/holtek/: hf5032.cmake  ht32f0.cmake  ht32f12.cmake  ht32f16.cmake  ht32f17.cmake  ht32f2.cmake  ht32f490.cmake  ht32f491.cmake  ht32f493.cmake  ht32f500.cmake  ht32f5022.cmake  ht32f50230.cmake  ht32f50231.cmake  ht32f5024.cmake  ht32f503.cmake  ht32f504.cmake  ht32f521.cmake  ht32f5222.cmake  ht32f5223.cmake  ht32f5224.cmake  ht32f5225.cmake  ht32f5233.cmake  ht32f5234.cmake  ht32f5235.cmake  ht32f5236.cmake  ht32f53.cmake  ht32f5423.cmake  ht32f5424.cmake  ht32f5425.cmake  ht32f57.cmake  ht32f58.cmake  (+21 more)
ARM/gcc_clang/common/: common.h  delays.h  me_compiler_specifics.c  me_string.c  me_string.h  syscalls.c
ARM/gcc_clang/def/: A31C121FRN.json  A31C121FUN.json  A31C121GRN.json  A31C121KYN.json  A31C121LUN.json  A31C122FRN.json  A31C122FUN.json  A31C122GRN.json  A31C122KYN.json  A31C122LUN.json  A31C143CLN.json  A31C143CYN.json  A31C143GRN.json  A31C143KYN.json  A31C143RLN.json  A31C143SNN.json  A31C144CLN.json  A31C144CUN.json  A31C144CYN.json  A31C144GRN.json  A31C144KYN.json  A31C144RL2N.json  A31C144RLN.json  A31C144RN2N.json  A31C144SN2N.json  A31C144SNN.json  A31G111GR.json  A31G111KN.json  A31G111KU.json  A31G111LU.json  A31G112CL.json  A31G112GR.json  A31G112KN.json  A31G112KU.json  A31G112KY.json  A31G112LU.json  A31G112SN.json  A31G112SQ.json  A31G122ML.json  A31G122MM.json  (+9586 more)
ARM/gcc_clang/include/: core_header.h.in  me_built_in.h
ARM/gcc_clang/interrupts/: interrupts.c
PIC/XC8/: CMakeLists.txt
PIC/XC8/cmake/: coreUtils.cmake  xc8.cmake
PIC/XC8/common/: delays.h  me_string.c  me_string.h
PIC/XC8/def/: PIC10F320.json  PIC10F322.json  PIC10LF320.json  PIC10LF322.json  PIC12C671.json  PIC12C672.json  PIC12CE673.json  PIC12CE674.json  PIC12F1501.json  PIC12F1571.json  PIC12F1572.json  PIC12F1612.json  PIC12F1822.json  PIC12F1840.json  PIC12F609.json  PIC12F615.json  PIC12F617.json  PIC12F629.json  PIC12F635.json  PIC12F675.json  PIC12F683.json  PIC12F752.json  PIC12HV609.json  PIC12HV615.json  PIC12HV752.json  PIC12LF1501.json  PIC12LF1552.json  PIC12LF1571.json  PIC12LF1572.json  PIC12LF1612.json  PIC12LF1822.json  PIC12LF1840.json  PIC16C432.json  PIC16C433.json  PIC16C620.json  PIC16C620A.json  PIC16C621.json  PIC16C621A.json  PIC16C622.json  PIC16C622A.json  (+810 more)
PIC/XC8/include/: core_header.h.in
PIC/XC8/interrupts/: interrupts.c
RISCV/gcc_clang/: CMakeLists.txt
RISCV/gcc_clang/cmake/: coreUtils.cmake  riscv.cmake
RISCV/gcc_clang/common/: bits.h  delays.h  rcu_typedef.h
RISCV/gcc_clang/def/: GD32VF103C4T6.json  GD32VF103C6T6.json  GD32VF103C8T6.json  GD32VF103CBT6.json  GD32VF103R4T6.json  GD32VF103R6T6.json  GD32VF103R8T6.json  GD32VF103RBT6.json  GD32VF103T4U6.json  GD32VF103T6U6.json  GD32VF103T8U6.json  GD32VF103TBU6.json  GD32VF103V8T6.json  GD32VF103VBT6.json  GD32VW553HIQ6.json  GD32VW553HIQ7.json  GD32VW553HMQ6.json  GD32VW553HMQ7.json  GD32VW553KIQ6.json  GD32VW553KIQ7.json  GD32VW553KMQ6.json  GD32VW553KMQ7.json
RISCV/gcc_clang/include/: core_header.h.in
RISCV/gcc_clang/interrupts/: interrupts.c
RISCV/gcc_clang/linker_scripts/: GD32VF103R4T6.ld  GD32VF103R8T6.ld  gd32vf103rbt6.ld  gd32vf103t6u6.ld  gd32vw553hiq7.ld  gd32vw553hmq7.ld
RISCV/gcc_clang/startup/: gd32vw553hiq7.S  gd32vw553kmq6.S
RISCV/gcc_clang/system/: system_gd32vf103x.c
(+50102 files in other folders)
